--- a/frontend/src/components/SignUp/SignUp.css
+++ b/frontend/src/components/SignUp/SignUp.css
@@ -26,7 +26,7 @@
     position: absolute;
     width: calc(20px * var(--scale));
     height: calc(20px * var(--scale));
-    border: calc(3px * var(--scale)) solid ##2196f3;
+    border: calc(3px * var(--scale)) solid #2196f3;
     border-radius: 50%;
     left: calc(7px * var(--scale));
     top: calc(5px * var(--scale));
@@ -46,7 +46,7 @@
     position: absolute;
     width: calc(26px * var(--scale));
     height: calc(3px * var(--scale));
-    background: linear-gradient(90deg, ##2196f3, #0d47a1);
+    background: linear-gradient(90deg, #2196f3, #0d47a1);
     top: calc(14px * var(--scale));
     left: calc(17px * var(--scale));
   }
